[package]
name = "acts-store-postgres"
description = "acts store plugin for postgres"
homepage = "https://docs.rs/acts-store-postgres"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true


[dependencies]
acts = { workspace = true }
futures = "0.3.31"
sea-query = { version = "0.32.4" }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio"] }
sea-query-binder = { version = "0.7.0", features = ["sqlx-postgres"] }
serde = "1.0.219"
serde_json = "1.0.140"
async-trait = { workspace = true }

[dev-dependencies]
chrono = "0.4.41"
nanoid = "0.4.0"
tokio = "1.45.0"
