[package]
name = "acts-package-http"
description = "acts package for http request"
homepage = "https://docs.rs/acts-package-http"
version = "0.17.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
acts = { version = "0.17.0", path = "../../acts" }
async-trait = { workspace = true }
base64 = "0.22.1"
reqwest = { version = "0.12.18", features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
