[package]
name = "acts-package-shell"
description = "acts package for shell"
homepage = "https://docs.rs/acts-package-http"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
acts = { path = "../../acts" }
async-trait = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
