[package]
name = "acts-package-state"
authors = ["Yao <yaojianpin@sohu.com>"]
description = "acts package for state store"
keywords = ["workflow"]
license = "Apache-2.0"
homepage = "https://docs.rs/acts-package-state"
repository = "https://github.com/yaojianpin/acts.git"
version = "0.17.0"
edition = "2024"

[dependencies]
redis = { version = "0.31.0", default-features = false }
acts = { version = "0.17.0", path = "../../acts" }
serde = "1.0.219"
serde_json = "1.0.140"
async-trait = { workspace = true }
