[package]
name = "acts-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
acts = { version = "0.16.0", path = "../../" }
futures = "0.3.31"
sea-query = { version = "0.32.4" }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio"] }
sea-query-binder = { version = "0.7.0", features = ["sqlx-postgres"] }

[dev-dependencies]
chrono = "0.4.41"
nanoid = "0.4.0"
tokio = "1.45.0"
