[package]
name = "acts-store-postgres"
authors = ["Yao <yaojianpin@sohu.com>"]
description = "acts store plugin for postgres"
keywords = ["workflow"]
license = "Apache-2.0"
homepage = "https://docs.rs/acts-store-postgres"
repository = "https://github.com/yaojianpin/acts.git"
version = "0.16.1"
edition = "2024"

[dependencies]
acts = { version = "0.16.0", path = "../../acts" }
futures = "0.3.31"
sea-query = { version = "0.32.4" }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio"] }
sea-query-binder = { version = "0.7.0", features = ["sqlx-postgres"] }
serde = "1.0.219"
serde_json = "1.0.140"
async-trait = { workspace = true }

[dev-dependencies]
chrono = "0.4.41"
nanoid = "0.4.0"
tokio = "1.45.0"
