[package]
name = "acts-sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
acts = { version = "0.16.0", path = "../../" }
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.25", features = ["bundled"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sea-query = { version = "0.32.4" }
sea-query-rusqlite = "0.7.0"
serde_json = "1.0.140"

[features]

[dev-dependencies]
chrono = "0.4.41"
nanoid = "0.4.0"
tokio = "1.45.0"
