[package]
name = "acts-store-sqlite"
authors = ["Yao <yaojianpin@sohu.com>"]
description = "acts store plugin for sqlite"
keywords = ["workflow"]
license = "Apache-2.0"
homepage = "https://docs.rs/acts-store-sqlite"
repository = "https://github.com/yaojianpin/acts.git"
version = "0.17.0"
edition = "2024"

[dependencies]
acts = { version = "0.17.0", path = "../../acts" }
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.25", features = ["bundled"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sea-query = { version = "0.32.4" }
sea-query-rusqlite = "0.7.0"
serde = "1.0.219"
serde_json = "1.0.140"
async-trait = { workspace = true }

[features]

[dev-dependencies]
chrono = "0.4.41"
nanoid = "0.4.0"
tokio = "1.45.0"
